Issue #9 - Fixing CircleCI build
Erasing test scripts from package.json for now.

It fixes #9.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "Web application for the Sticky Session app",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DiscordTime/sticky-sessions-web.git"
