--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Web application for the Sticky Session app",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "lint": "./node_modules/eslint/bin/eslint.js ."
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DiscordTime/sticky-sessions-web.git"
@@ -17,5 +19,13 @@
   "dependencies": {
     "express": "^4.16.3",
     "firebase-admin": "^5.13.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.2.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0"
   }
 }
