--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.11",
     "firebase": "^5.3.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
