--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.0.0-rc.11",
     "firebase": "^5.3.1",
+    "flexbox": "0.0.3",
     "vue": "^2.5.17",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
