--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "firebase": "^5.3.1",
     "flexbox": "0.0.3",
+    "moment": "^2.22.2",
     "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1"
