--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flexbox": "0.0.3",
     "moment": "^2.22.2",
     "vue": "^2.5.17",
+    "vue-json-excel": "^0.2.83",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1"
   },
