--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,3 +39,40 @@ jobs:
 
       # run tests!
 #- run: yarn test
+  deploy:
+    docker:
+      - image: google/cloud-sdk
+    working_directory: ~/sticky-sessions-web
+    steps:
+      - checkout
+      - run: 
+          name: Setup Google Cloud SDK
+          command: |
+            apt-get install -qq -y gettext
+            echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
+            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: Insert Firebase Service Account File
+          command: echo $FIREBASE_DB > src/db/firebaseDB/keys/index.js
+      - run: 
+          name: Docker Build, Push and Deploy
+          command: |
+            docker build -t ${IMAGE_NAME} .
+            docker tag ${IMAGE_NAME} gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:${CIRCLE_SHA1}
+            docker tag ${IMAGE_NAME} gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:latest
+            gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://gcr.io
+            docker push gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:${CIRCLE_SHA1}
+            docker push gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:latest
+            gcloud --quiet compute ssh stick-sessions --zone us-east1-b -- 'cd /home/app && ./restart_client.sh'
+
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
