--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,3 +66,8 @@ workflows:
       - deploy:
           requires:
             - build
+          filters:
+            branches:
+              only: 
+                - dev
+                - master
