--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,11 +47,7 @@ jobs:
       - checkout
       - run: 
           name: Setup Google Cloud SDK
-          command: |
-            apt-get install -qq -y gettext
-            echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
-            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
-            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+          command: scripts/setup.sh
       - setup_remote_docker:
           docker_layer_caching: true
       - run: 
