Issue #55: Update CircleCI config to automatically deploy application
The build config now creates a new Docker image, tags it with latest, pushes it to
Google Container Registry and deploys to Google Compute Engine.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,3 +39,31 @@ jobs:
 
       # run tests!
 #- run: yarn test
+  deploy:
+    docker:
+      - image: google/cloud-sdk
+    working_directory: ~/sticky-sessions-web
+    steps:
+      - checkout
+      - run: 
+          name: Setup Google Cloud SDK
+          command: scripts/setup.sh
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: 
+          name: Docker Build, Push and Deploy
+          command: scripts/deploy.sh
+
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: 
+                - dev
+                - master
