--- a/sticky-react/package.json
+++ b/sticky-react/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.1",
-    "@material-ui/icons": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
+    "babel-eslint": "^10.0.1",
     "firebase": "^6.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.0.1",
-    "react-with-firebase-auth": "^1.0.3"
+    "react-with-firebase-auth": "^1.0.3",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "HTTPS=false SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
