--- a/sticky-react/package.json
+++ b/sticky-react/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.1.1",
     "@material-ui/icons": "^4.2.1",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.1",
     "firebase": "^6.2.0",
     "react": "^16.8.6",
