--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,5 +72,5 @@ workflows:
           filters:
             branches:
               only: 
-                - dev
+                - deploy_fix
                 - master
